log
Fri 05 May 2023 06:28:06 PM UTC: 
 tests:  0|5
total_score: 0/70
934665f
Fri 05 May 2023 06:35:36 PM UTC: 
 sudoku.c | 38 +++++++++++++++++++++++++-------------
 1 file changed, 25 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:16: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   68 |         return list;
      |                ^~~~
      |                List
sudoku.c:68:16: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
30c225c
Fri 05 May 2023 06:35:46 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d6ede6e
Fri 05 May 2023 06:42:52 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9ec92bd
Fri 05 May 2023 06:43:17 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
382ebd0
Fri 05 May 2023 06:45:20 PM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7034d81
Sat 06 May 2023 04:46:05 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|3
total_score: 35/70
a3d579c
